<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".After_login"
    android:background="@color/colrback">


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            >
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="210dp"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:background="@drawable/dashboard1">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"/>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="215dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="135dp"
                        android:orientation="horizontal"
                        android:layout_marginBottom="10dp">

                        <androidx.cardview.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:layout_gravity="center"
                            android:layout_marginRight="5dp"
                            android:orientation="vertical">

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">
                                <ImageView
                                    android:layout_width="50dp"
                                    android:id="@+id/imageview1"
                                    android:layout_height="50dp"
                                    android:src="@drawable/expense"
                                    android:layout_centerInParent="true"
                                    android:contentDescription="TODO" />


                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Add expense"
                                    android:textSize="16dp"
                                    android:layout_below="@id/imageview1"
                                    android:layout_centerHorizontal="true"
                                    android:layout_marginTop="10dp"
                                    android:layout_marginBottom="10dp" />

                                <Button
                                    android:id="@+id/btnExpense"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"

                                    android:background="@android:color/transparent"
                                    android:onClick="@string/Add_expense" />
                            </RelativeLayout>
                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:layout_gravity="center"
                            android:layout_marginLeft="5dp"
                            android:orientation="vertical">


                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">
                                <ImageView
                                    android:layout_width="50dp"
                                    android:id="@+id/imageview2"
                                    android:layout_height="50dp"
                                    android:src="@drawable/income"
                                    android:layout_centerInParent="true"
                                    android:contentDescription="TODO" />


                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Add income"
                                    android:textSize="16dp"
                                    android:layout_below="@id/imageview2"
                                    android:layout_centerHorizontal="true"
                                    android:layout_marginTop="10dp"
                                    android:layout_marginBottom="10dp" />

                                <Button
                                    android:id="@+id/btnIncome"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:background="@android:color/transparent"
                                    android:onClick="@string/Add_income" />
                            </RelativeLayout>
                        </androidx.cardview.widget.CardView>



                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="135dp"
                        android:orientation="horizontal"
                        android:layout_marginBottom="10dp">

                        <androidx.cardview.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:layout_gravity="center"
                            android:layout_marginRight="5dp"
                            android:orientation="vertical">


                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">
                                <ImageView
                                    android:layout_width="50dp"
                                    android:id="@+id/imageview3"
                                    android:layout_height="50dp"
                                    android:src="@drawable/transaction"
                                    android:layout_centerInParent="true"
                                    android:contentDescription="TODO" />


                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="All Transaction"
                                    android:textSize="16dp"
                                    android:layout_below="@id/imageview3"
                                    android:layout_centerHorizontal="true"
                                    android:layout_marginTop="10dp"
                                    android:layout_marginBottom="10dp" />

                                <Button
                                    android:id="@+id/btnTransaction"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:background="@android:color/transparent"
                                    android:onClick="@string/Transaction" />
                            </RelativeLayout>
                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:layout_gravity="center"
                            android:layout_marginLeft="5dp"
                            android:orientation="vertical">


                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">
                                <ImageView
                                    android:layout_width="50dp"
                                    android:id="@+id/imageview4"
                                    android:layout_height="50dp"
                                    android:src="@drawable/report"
                                    android:layout_centerInParent="true"
                                    android:contentDescription="TODO" />


                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Daily Report"
                                    android:textSize="16dp"
                                    android:layout_below="@id/imageview4"
                                    android:layout_centerHorizontal="true"
                                    android:layout_marginTop="10dp"
                                    android:layout_marginBottom="10dp" />

                                <Button
                                    android:id="@+id/btnDatewise"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:background="@android:color/transparent"
                                    android:onClick="@string/Date_wise" />
                            </RelativeLayout>
                        </androidx.cardview.widget.CardView>



                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="135dp"
                        android:orientation="horizontal"
                        android:layout_marginBottom="10dp">

                        <androidx.cardview.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:layout_gravity="center"
                            android:layout_marginRight="5dp"
                            android:orientation="vertical">


                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">
                                <ImageView
                                    android:layout_width="50dp"
                                    android:id="@+id/imageview5"
                                    android:layout_height="50dp"
                                    android:src="@drawable/graph"
                                    android:layout_centerInParent="true"
                                    android:contentDescription="TODO" />


                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Graph Representation"
                                    android:textSize="16dp"
                                    android:layout_below="@id/imageview5"
                                    android:layout_centerHorizontal="true"
                                    android:layout_marginTop="10dp"
                                    android:layout_marginBottom="10dp" />

                                <Button
                                    android:id="@+id/btnGraph"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:background="@android:color/transparent"
                                    android:onClick="@string/Graph_representation" />
                            </RelativeLayout>
                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:layout_gravity="center"
                            android:layout_marginLeft="5dp"
                            android:orientation="vertical">


                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">
                                <ImageView
                                    android:layout_width="50dp"
                                    android:id="@+id/imageview6"
                                    android:layout_height="50dp"
                                    android:src="@drawable/exit"
                                    android:layout_centerInParent="true"
                                    android:contentDescription="TODO" />


                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Exit"
                                    android:textSize="16dp"
                                    android:layout_below="@id/imageview6"
                                    android:layout_centerHorizontal="true"
                                    android:layout_marginTop="10dp"
                                    android:layout_marginBottom="10dp" />

                                <Button
                                    android:id="@+id/btnExit"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:background="@android:color/transparent"
                                    android:onClick="@string/Exit" />
                            </RelativeLayout>
                        </androidx.cardview.widget.CardView>



                    </LinearLayout>

                </LinearLayout>
            </RelativeLayout>

        </LinearLayout>
            </ScrollView>
</RelativeLayout>